fix the spacing on home page

--- a/cws/src/App.css
+++ b/cws/src/App.css
@@ -126,17 +126,7 @@ a {
         }
 
         .aboutIPC{
-            background-color: transparent;
-            margin-top: -70px;
-            margin-bottom: -20px;
+        display: none;
         }
 
-        .slider {
-            width: 100%;
-            height: 300px;
- 
-        }
-        .ipc__whatIPC {
-            margin-top: 0 0;
-        }
 }
